<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstAid"
    android:background="@drawable/firstaid">


    <Button
        android:id="@+id/button1"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="89dp"
        android:onClick="CPR"
        android:text="@string/cpr"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="223dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="143dp"
        android:onClick="Fracture"
        android:text="@string/fracture"
        android:textSize="21dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="354dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="143dp"
        android:onClick="Fire"
        android:text="@string/fire"
        android:textSize="28dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="496dp"
        android:text="@string/snake_bite"
        android:onClick="SNAKEBITE"
        android:textSize="20dp" />


</RelativeLayout>